# ChangeLog for dev-perl/Cache-Memcached
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Memcached/ChangeLog,v 1.58 2008/01/21 20:35:39 caleb Exp $

  21 Jan 2008; Caleb Tennis <caleb@gentoo.org> -Cache-Memcached-1.18.ebuild,
  -Cache-Memcached-1.20.ebuild, -Cache-Memcached-1.21.ebuild,
  -Cache-Memcached-1.23.ebuild:
  remove old versions

  26 Dec 2007; Samuli Suominen <drac@gentoo.org>
  Cache-Memcached-1.24.ebuild:
  amd64 stable wrt #202730

  25 Dec 2007; Brent Baude <ranger@gentoo.org> Cache-Memcached-1.24.ebuild:
  Marking Cache-Memcached-1.24 ppc64 for bug 202730

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing lisa from metadata.xml as per #23541.

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Cache-Memcached-1.24.ebuild:
  ppc stable, bug #202730

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org> Cache-Memcached-1.24.ebuild:
  Stable for HPPA (bug #202730).

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  Cache-Memcached-1.24.ebuild:
  alpha/ia64/sparc/x86 stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  Cache-Memcached-1.23.ebuild:
  amd64 stable

  23 Oct 2007; Diego Pettenò <flameeyes@gentoo.org>
  Cache-Memcached-1.24.ebuild:
  Add ~x86-fbsd keyword.

  11 Oct 2007; Jeroen Roovers <jer@gentoo.org> Cache-Memcached-1.23.ebuild:
  Stable for HPPA (drac).

  06 Oct 2007; Tom Gall <tgall@gentoo.org> 
  Cache-Memcached-1.23.ebuild:
  stable on ppc64

  24 Sep 2007; Samuli Suominen <drac@gentoo.org>
  Cache-Memcached-1.24.ebuild:
  Edit old rdep which didn't install string-crc32 on ia64 arch but ia64 has
  string-crc32 now stable.

*Cache-Memcached-1.24 (24 Sep 2007)

  24 Sep 2007; Samuli Suominen <drac@gentoo.org>
  +Cache-Memcached-1.24.ebuild:
  Version bump.

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Cache-Memcached-1.23.ebuild:
  Stable on sparc

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>