@@ -1,0 +1,23 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Memcached/Cache-Memcached-1.25.ebuild,v 1.1 2009/05/03 20:30:08 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=BRADFITZ
+inherit perl-module
+
+DESCRIPTION="Perl API for memcached"
+HOMEPAGE="http://www.danga.com/memcached/"
+
+SRC_TEST="do"
+
+SLOT="0"
+KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+IUSE=""
+
+DEPEND="dev-perl/string-crc32
+	dev-lang/perl"
+RDEPEND="${DEPEND}"
+
+mydoc="ChangeLog README TODO"
