@@ -1,4 +1,6 @@
 DIST Cache-Memcached-1.24.tar.gz 17144 RMD160 815ee6238e4517160f412554ce94af4e65a0e978 SHA1 b317b9187477fa20223d057eb33a5df4d2b13b5d SHA256 c277171df3a9377e1cd6188abeabd1c534835deec0978ff2347f62b78126c245
+DIST Cache-Memcached-1.25.tar.gz 18200 RMD160 5adc6ba51a1912fc1a86e0ac576ad185ac5a9e6a SHA1 207884a4978704706c672a5e13476b3ab23265ce SHA256 c3c7032472c659b8caf83d46ea543a854c4f10d8c6e3865e06b7203747327098
 EBUILD Cache-Memcached-1.24.ebuild 607 RMD160 cd3fdcff6f1889321167c1a4be17d9960d671f2d SHA1 e3fec0bc3cb1efb7bde1a4e26fdcb252844deffa SHA256 66823b6fc5f737141993002274a121353014d34875db65d70603f0fc8f836caa
-MISC ChangeLog 9415 RMD160 35391b1a6dc0bd7a532dc06d610963db4023cd95 SHA1 5424f012145d1051228018491909d904c9f53e66 SHA256 970b9408c58831e21c9659833a94f4b966494d4806e799f956245b7baf076c44
+EBUILD Cache-Memcached-1.25.ebuild 566 RMD160 31e6768af0c2767ade0ef151ae31ec126c9165bc SHA1 7e1e7abb9646ee6b3dcaad4461ef6cb60a34e83b SHA256 aafb3a6daa33dd5aa1d8e02e0fc6f04caea2146ad6dcefc1113dfcde4b2efb46
+MISC ChangeLog 9547 RMD160 200b37e7509c3f7bb121f1175cc1998aba25ed3c SHA1 097a90ee46d035635ad188ab06fd72b167385360 SHA256 a51b449ebd47c9e95dd8898937a0fcb327f2d70e8780beab52cff5a4b3b7ae92
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
