@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Cache-Memcached
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Memcached/ChangeLog,v 1.58 2008/01/21 20:35:39 caleb Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Memcached/ChangeLog,v 1.59 2009/05/03 20:30:08 tove Exp $
+
+*Cache-Memcached-1.25 (03 May 2009)
+
+  03 May 2009; Torsten Veller <tove@gentoo.org>
+  +Cache-Memcached-1.25.ebuild:
+  Version bump
 
   21 Jan 2008; Caleb Tennis <caleb@gentoo.org> -Cache-Memcached-1.18.ebuild,
   -Cache-Memcached-1.20.ebuild, -Cache-Memcached-1.21.ebuild,
